--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +37,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-knobs": "^5.3.18",
+    "@storybook/addon-storyshots": "^5.3.18",
+    "@storybook/react": "^5.3.18",
+    "@types/storybook__addon-knobs": "^5.2.1",
+    "@types/storybook__addon-storyshots": "^5.3.1",
+    "@types/storybook__react": "^5.2.1",
+    "react-test-renderer": "^16.13.1",
+    "require-context.macro": "^1.2.2"
   }
 }
